<resources>
    <string name="app_name">AssignmentSecond</string>
    <string name="user_registration">User Registration</string>
    <string name="name">Name: </string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone Number:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="country">Country:</string>
    <string name="submit">Submit</string>
    <string name="view">View</string>
    <string name="first_user">First User</string>
    <string name="second_assignment">Second Assignment</string>
</resources>
